fix simul table overflow

--- a/ui/simul/css/_list.scss
+++ b/ui/simul/css/_list.scss
@@ -33,7 +33,6 @@
     }
     .name {
       white-space: nowrap;
-      letter-spacing: 2px;
       font-size: 1.7em;
       display: block;
     }
